--- a/App.xaml
+++ b/App.xaml
@@ -4,4 +4,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:weather">
 
+    <!--Risorse dell'applicazione-->
+    <Application.Resources>
+        <Style x:Key="WeatherCard" TargetType="Button">
+            <Setter Property="Padding" Value="10 10 50 10" />
+            <Setter Property="Margin" Value="5" />
+        </Style>
+    </Application.Resources>
+
 </Application>
