--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,31 +2,30 @@
     x:Class="weather.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:weather"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-   
 
-    <Grid Background="CadetBlue">
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
+    <ScrollViewer>
+        <Grid Background="CadetBlue">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Vertical" Grid.Row="0" Margin="50">
-            <TextBlock
+            <StackPanel Grid.Row="0" Orientation="Vertical" Margin="10 100 10 10">
+                <TextBlock
                 Text="Country, City"
                 FontSize="22"
                 TextAlignment="Center"/>
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 
-                <Image x:Name="Icon" Source="Assets/images/sun.png" Width="80"/>
+                    <Image x:Name="Icon" Source="Assets/images/sun.png" Width="80"/>
 
-                <RelativePanel x:Name="DegreeType">
-                    <TextBlock
+                    <RelativePanel x:Name="DegreeType">
+                        <TextBlock
                     x:Name="Degrees"
                     Text="22°"
                     FontSize="80"
@@ -34,7 +33,7 @@
                     Padding="10"
                     />
 
-                    <TextBlock
+                        <TextBlock
                         x:Name="Celsium"
                         Text="C"
                         FontSize="22"
@@ -42,7 +41,7 @@
                         
                         RelativePanel.RightOf="Degrees"
                         />
-                    <TextBlock
+                        <TextBlock
                         x:Name="Fahrenheit"
                         Text="F"
                         FontSize="22"
@@ -50,39 +49,104 @@
                         RelativePanel.RightOf="Degrees"
                         RelativePanel.Below="Celsium"
                         />
-                </RelativePanel>
+                    </RelativePanel>
 
-            </StackPanel>
-
-            <TextBlock x:Name="Weather"
-                       Text="Sunny"
-                       HorizontalAlignment="Center"
-                       FontSize="28"
-                       FontWeight="Light"
-                       Padding="0 0 0 0" />
-
-            <TextBlock x:Name="UpdateTime"
-                       Text="Updated as of 2:31 PM"
-                       HorizontalAlignment="Center"/>
-
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-                <StackPanel Orientation="Horizontal">
-                     
-                    <TextBlock Text="Feels like" Padding="0 0 50 0"></TextBlock>
-                    <TextBlock Text="20°"></TextBlock>
-
-                    <TextBlock Text="Wind "></TextBlock>
-                    <TextBlock Text="5 km/h"></TextBlock>
-
-                    <TextBlock Text="Feels like "></TextBlock>
-                    <TextBlock Text="20°"></TextBlock>
-                    
                 </StackPanel>
-                <StackPanel Orientation="Horizontal"></StackPanel>
+
+                <TextBlock x:Name="Weather"
+                        Text="Sunny"
+                        HorizontalAlignment="Center"
+                        FontSize="28"
+                        FontWeight="Light"
+                        Padding="0 0 0 0" />
+
+                <TextBlock x:Name="UpdateTime"
+                        Text="Updated as of 2:31 PM"
+                        HorizontalAlignment="Center"
+                        Padding="0 10 10 10"/>
+
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Padding="0 5 0 0">
+                        <TextBlock Text="Feels like" Padding="0 0 5 0"></TextBlock>
+                        <TextBlock Text="20°" Padding="0 0 20 0"></TextBlock>
+
+                        <TextBlock Text="Wind" Padding="0 0 5 0"></TextBlock>
+                        <TextBlock Text="5 km/h" Padding="0 0 20 0"></TextBlock>
+
+                        <TextBlock Text="Visibility" Padding="0 0 5 0"></TextBlock>
+                        <TextBlock Text="6 km" Padding="0 0 0 0"></TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Padding="0 5 0 0">
+                        <TextBlock Text="Barometer" Padding="0 0 5 0"></TextBlock>
+                        <TextBlock Text="1023.00 mb" Padding="0 0 20 0"></TextBlock>
+
+                        <TextBlock Text="Humidity" Padding="0 0 5 0"></TextBlock>
+                        <TextBlock Text="83%" Padding="0 0 20 0"></TextBlock>
+
+                        <TextBlock Text="Dew Point" Padding="0 0 5 0"></TextBlock>
+                        <TextBlock Text="17°" Padding="0 0 0 0"></TextBlock>
+                    </StackPanel>
+                </StackPanel>
             </StackPanel>
 
-        </StackPanel>
-        
-    </Grid>
+            <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Center" Margin="30 30 10 30">
+                <TextBlock Text="Daily" FontSize="22"></TextBlock>
+
+                <StackPanel Orientation="Horizontal">
+
+                    <Button
+                        Name="WeatherCard"
+                        Style="{ StaticResource WeatherCard }"
+                        Click="onClick">
+                        <StackPanel>
+                            <TextBlock Text="Wed 26"/>
+
+                            <Image
+                            Source="Assets/images/wind.png"
+                            Width="35"
+                            Margin="10" />
+
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock
+                                Text="27°"
+                                FontSize="25" />
+
+                                <TextBlock
+                                Text="13°"
+                                Padding="10 10 0 0"
+                                Foreground="LightGray" />
+                            </StackPanel>
+
+                            <TextBlock
+                            Text="Sunny"
+                            Padding="0 3 0 0"
+                            FontSize="12"/>
+                        </StackPanel>
+                    </Button>
+
+                </StackPanel>
+
+                <ListBox x:Name="WeatherCardListBox"
+                         Margin="5"
+                         Width="450"
+                         Height="200"
+                         HorizontalAlignment="Left"
+                         ItemsSource="{Binding}"
+                         >
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal" Margin="2">
+                                <TextBlock Text="Artist:" Margin="2" />
+                                <TextBlock Text="{Binding Artist}" Margin="2" />
+                                <TextBlock Text="CD:" Margin="10,2,0,2" />
+                                <TextBlock Text="{Binding Name}" Margin="2" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </StackPanel>
+        </Grid>
+    </ScrollViewer>
     
 </Page>
